--- a/app/components/landing/landing.html
+++ b/app/components/landing/landing.html
@@ -1,17 +1,17 @@
-<div class="container center_div">
-    <form ng-submit="sendUsername()">
-      <input userName="userName" ng-model="userName" type="text" placeholder="Enter Summoner Name">
-      <select ng-model='season' placeholder = '2016'>
-        <option value="SEASON2016">Season 6</option>
-        <option value="SEASON2015">Season 5</option>
-        <option value="SEASON2014">Season 4</option>
-        <option value="SEASON3">Season 3</option>
-      </select>
-      <div class="btn-group">
-        <input type="submit"></input>
-      </div>
-    </form>
+<div class="jumbotron">
+  <form ng-submit="sendUsername()">
+    <div class="input-group">
+
+    <select class="form-control"ng-model='season' placeholder='2016'>
+      <option value="SEASON2016">Season 6</option>
+      <option value="SEASON2015">Season 5</option>
+      <option value="SEASON2014">Season 4</option>
+      <option value="SEASON3">Season 3</option>
+    </select>
+      <input class="form-control" userName="userName" ng-model="userName" type="text" placeholder="Enter Summoner Name" aria-describedby="basic-addon1"></input>
+      <span class="input-group-addon">
+        <input class="" type="submit" value="Submit">
+      </span>
+    </div>
+  </form>
 </div>
-
-
-    
